--- a/public/style.css
+++ b/public/style.css
@@ -250,8 +250,9 @@
       background: #3FB8AF; }
 
 #word-cloud-container {
-  margin: 2rem auto;
-  width: auto; }
+  box-sizing: border-box;
+  width: calc( 100% - 400px);
+  text-align: center; }
 
 html {
   margin: 0;
@@ -284,7 +285,7 @@ nav {
   padding: 1rem 2rem;
   text-align: right;
   z-index: 1000;
-  box-sizing: padding-box; }
+  box-sizing: border-box; }
   nav h1 {
     display: inline-block;
     margin: 0 3rem 0 0;
@@ -300,7 +301,7 @@ nav {
       content: "//";
       color: #555; }
     nav a:hover {
-      color: #FF1660; }
+      color: #3FB8AF; }
 
 #main {
   padding-top: 42px; }
