copied d3.layout.cloud.js to lib dir

--- a/views/word-cloud.pug
+++ b/views/word-cloud.pug
@@ -4,7 +4,7 @@ block title
   title Article Title
 block otherScript
   script(src="https://d3js.org/d3.v3.min.js")
-  script(src="d3.layout.cloud.js")
+  script(src="js/lib/d3.layout.cloud.js")
   //- https://github.com/davidmerfield/randomColor
   script(src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.4.4/randomColor.min.js" type="text/javascript")
 
