favicon and doc title

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 extends ./layout.pug
 
 block title
-  title Article Title
+  title Highlighter
 block otherScript
   script(src="http://johannburkard.de/resources/Johann/jquery.highlight-5.js")
 
