--- a/views/word-cloud.pug
+++ b/views/word-cloud.pug
@@ -1,7 +1,7 @@
 extends ./layout.pug
 
 block title
-  title Article Title
+  title Word Cloud
 block otherScript
   script(src="https://d3js.org/d3.v3.min.js")
   script(src="js/lib/d3.layout.cloud.js")
