--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     block title
       title Default title
+    link(rel="icon" href="img/favicon.png" type="image/png")
     link(href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet")
     link(href="style.css" rel="stylesheet")
     script(src="https://code.jquery.com/jquery-3.0.0.min.js"
