--- a/views/home.pug
+++ b/views/home.pug
@@ -25,6 +25,7 @@ block main
 
   div(id="etherpads-container" class="main-containers")
     div(id="etherpad-result")
+      div(class="scanner-mask")
       ul
         each etherpad in etherpads
           li(class="etherpad")
