--- a/public/style.css
+++ b/public/style.css
@@ -55,9 +55,55 @@
     background: #256c67; }
 
 #etherpads-container {
-  margin-left: 500px;
+  position: relative;
+  margin-left: calc( 450px + 2rem *2);
   padding-top: 0;
   word-wrap: break-word; }
+  #etherpads-container .scanner {
+    position: fixed;
+    top: 4rem;
+    right: 0;
+    content: "";
+    height: 1.5rem;
+    width: calc( 100% - ( 450px + 2rem *2));
+    background: green;
+    -webkit-filter: blur(5px);
+            filter: blur(5px);
+    visibility: hidden;
+    z-index: 1000000;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-name: scan-down;
+            animation-name: scan-down;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1; }
+  #etherpads-container .scanner-mask {
+    position: absolute;
+    left: 0;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    opacity: .5; }
+
+@-webkit-keyframes scan-down {
+  from {
+    visibility: visible;
+    opacity: 1;
+    top: 4rem; }
+  to {
+    visibility: hidden;
+    opacity: 0;
+    top: 1200px; } }
+
+@keyframes scan-down {
+  from {
+    visibility: visible;
+    opacity: 1;
+    top: 4rem; }
+  to {
+    visibility: hidden;
+    opacity: 0;
+    top: 1200px; } }
 
 .etherpad {
   padding: 2rem; }
