--- a/views/word-cloud.pug
+++ b/views/word-cloud.pug
@@ -17,6 +17,7 @@ block main
             each keyphrase in category.keyphrases
               div(class="keyphrase")= keyphrase
   div(id="word-cloud-container" class="main-containers")
+    div(class="loading") loading...
     div(id="cloud")
 
 block bodyEndScripts
